<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coop Visa</string>
    <string name="action_search">Search</string>
    <string name="alert_title">Oops!</string>
    <string name="settings">Settings</string>
    <string name="activation_code">Activation code</string>
    <string name="activate_app">Activate the app</string>
    <string name="enter_activation_code">Enter activation code</string>
    <string name="create_four_digit_pin_code">Create your 4 digit PIN code</string>
    <string name="pin_code">PIN code</string>
    <string name="accounts">Accounts</string>
    <string name="enter_pin_code">Enter your PIN code</string>
    <string name="activation_code_text">Get your activation code at \n&lt;a href="http://www.entercard.com/">entercard.no/coop-visa&lt;/a>", and \nenter it below.</string>
    <string name="please_create_pin_code_text">Please create a four digit PIN code. This will be used each time you start the app so that we can identify you.</string>
    <string name="create_your_pin_code">Create your PIN code</string>
    <string name="btn_create_pin">Create your PIN code</string>
    <string name="create_account">Create account</string>
    <string name="tab_title_transaction">Transactions</string>
    <string name="tab_title_cards">Cards</string>
    <string name="tab_title_transfer">Transfer funds</string>
    <string name="option_transactions">Transactions</string>
    <string name="option_transfer_funds">Funds Transfer</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="option_credit_line_increase">Credit Line Increase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="transfer_funds_title">You can transfer up to the available balance on the card (including fees).\nFor the current rate and fees, see \n&lt;a href="http://www.remembercard.no/omkortet/Faktura-og-nedbetaling/Se-prisliste-og-vilkar/">price list&lt;/a>".</string>
    <string name="receiver_name">Receiver\'s name</string>
    <string name="clearing">Clearing</string>
    <string name="clearing_number_must_be">Clearing number must be 4 or 5 digits.</string>
    <string name="amount">Amount</string>
    <string name="account_number">Account number</string>
    <string name="message_or_kid">Message or KID</string>
    <string name="credit_limit">CREDIT LIMIT</string>
    <string name="recognize_transaction">I recognize this transaction</string>
    <string name="reason_for_dispute">Reason for dispute</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="dispute_transaction">Dispute transaction</string>
    <string name="searchable_hint">Search transactions</string>
    <string name="dispute">Dispute</string>
    <string name="used">USED</string>
    <string name="open_to_buy">OPEN TO BUY</string>
    <string name="latest_transactions">TRANSACTIONS</string>
    <string name="card_ending_with">Card number ending with:</string>
    <string name="desired_increase_in_credit">Desired increase in credit</string>
    <string name="yearly_income">Yearly income</string>
    <string name="household">Household</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="sign_plus">+</string>
    <string name="sign_minus">-</string>
    <string name="mortgage">Mortgage</string>
    <string name="other_loans">Other loans</string>
    <string name="occupancy">Occupancy</string>
    <string name="employment">Employment</string>
    <string name="tag_act_finish">ACTION_LOGOUT</string>
    <string name="btn_increase_credit_limit">+ Increase limit</string>
    <string name="btn_apply_credit_line_increase">Apply for a credit line increase</string>
    <string name="cards">CARDS</string>
    <string name="customer_service">CUSTOMER SERVICE</string>
    <string name="card_service">Card service</string>
    <string name="card_service_number">815 00 701</string>
    <string name="block_card">Block card</string>
    <string name="block_card_number">23 33 83 32</string>
    <string name="accept_terms_and_condition">Accept terms and conditions</string>
    <string name="application_been_sent">Your application has been sent.</string>
    <string name="accept_terms_conditions_dispute">I hereby declare that the information stated is true and correct. If the police investigates the case, I am aware that the card issuer will give the police the information they need in the investigation.</string>
    <string name="accept_terms_condition_cli">I agree that the information supplied is complete and accurate. I accept that a standard credit check will be performed, where information about my credit history will be collected. If the granted line of credit after the credit check is lower than the amount I applied for, I hereby accept the lower line of credit. When applying for a higher line of credit the re:member Terms and Conditions previously entered into apply. The Terms and Conditions are available at remembercard.se or by calling +46 771 150 015. Please keep in mind that increasing your line of credit could result in additional strain on your finances.</string>
    <string name="cancel">Cancel</string>
    <string name="i_accept">I accept</string>
    <string name="dispute_sent">Dispute Sent</string>
    <string name="you_will_hear_from_us">You will hear from us shortly</string>
    <string name="login">Login</string>

    <!-- TAGS -->
    <string name="tag_position">position</string>
    <string name="tag_open_to_buy">opentobuy</string>
    <string name="tag_spent">spent</string>
    <string name="no_internet_connection">No Internet Connection.</string>

    <!-- ENCAP Related -->
    <string name="encap_server_url_test">https://encap.test.signicat.com/encap_entercard</string>
    <string name="encap_app_id">encap</string>

    <!-- Replace "-" with an "en dash" character (–, &#8211;) ? -->
    <string name="encap_api_key">9f333c24&#8211;efa4&#8211;47b2&#8211;ac57&#8211;77540a8b2881</string>
    <string name="encap_public_key_hash_intermediate">sha1/Lb4cyh2b83PU2HP6yrlPxhq7Gk0=</string>
    <string name="encap_public_key_hash_leaf">sha1/+PyESkyd4MxX8ZOBdHbEdx1JBbE=</string>
    <string name="encap_server_timeout">60000</string>
    <string name="encap_signing_key_size">2048</string>

    <!-- Validation/Error Messages -->
    <string name="please_enter_code">Please enter code</string>
    <string name="encap_something_went_wrong">Something went wrong</string>
    <string name="encap_error">An error occurred. Please try again shortly.</string>
    <string name="encap_unknown_registration_error">Unknown registration exception. You will have to reactivate the device.</string>
    <string name="encap_authentication_error">You have enterd your PIN incorrectly too many times, and you will have to reactivate the device.</string>
    <string name="error_in_communication">There was some error communicating with the server. Please try again later</string>
    <string name="transfer_funds_validation">Receiver\'s name is missing.\nAccount number must be 11 digits.\nAmount must be atleast 500.</string>
    <string name="amount_cannot_be_higher_than_otb">Amount cannot be higher than your open to buy amount</string>
    <string name="receiver_name_missing">Receiver\'s name is missing.</string>
    <string name="account_number_length">Account number must be 11 digits.</string>
    <string name="amount_incorrect">Amount must be atleast 500.</string>
    <string name="funds_transfer_success">The funds were transferred successfully.</string>
    <string name="dispute_validation">Reason is missing.\nE-mail is missing.\nPhone number is missing.</string>
    <string name="reason_is_missing">Reason is missing.</string>
    <string name="email_is_missing">E-mail is missing.</string>
    <string name="email_is_invalid">E-mail address is in wrong format.</string>
    <string name="phone_is_missing">Phone number is missing.</string>
    <string name="no_transactions_found">No transctions found for this account.</string>
    <string name="credit_line_details_missing">The following is missing:\nYearly income is missing.\nEmployment type is missing.</string>
    <!-- \nMortgage is missing.\nOther loans is missing. -->
    <string name="yearly_income_missing">The following is missing:\nYearly income is missing.</string>
    <string name="mortgage_missing">Mortgage is missing.</string>
    <string name="other_loans_missing">Other loans is missing.</string>
    <string name="employment_is_missing">The following is missing:\nEmployment type is missing.</string>

    <!-- ENCAP PREFERENCE STORE RELATED -->
    <string name="pref_serverUrl_key">EncapServerUrl</string>
    <string name="pref_applicationId_key">EncapApplicationId</string>
    <string name="pref_apiKey_key">EncapApiKey</string>
    <string name="pref_publicKeyHashes_key">EncapPublicKeyHashes</string>
    <string name="pref_timeout_key">EncapTimeout</string>
    <string name="pref_signingEnabled_key">EncapSigningEnabled</string>
    <string name="pref_signingKeySize_key">EncapSigningKeySize</string>
    <string name="pref_registrationId_key">EncapRegistrationId</string>
    <string name="pref_applicationVersion_key">EncapApplicationVersion</string>
    <string name="pref_is_activated">isActivated</string>
    <string name="pref_device_session">deviceSession</string>
    <string name="pref_is_activation_code_verified">isActivationCodeVerified</string>
    <string name="pref_verify_pin">isPinVerified</string>

    <!-- HTTP HEADERS -->
    <string name="http_header_accept_language">Accept-Language</string>
    <string name="http_header_accept">Accept</string>
    <string name="http_header_saml">SAML</string>
    <string name="http_header_user_agent">User-Agent</string>
    <string name="http_header_device_platform ">devicePlatform</string>
    <string name="http_header_device_version">deviceVersion</string>
    <string name="http_header_uuid">UUID</string>
    <string name="http_header_jsessionid">JSESSIONID</string>
    <string name="http_header_content_type">Content-Type</string>
    <string name="http_header_set_cookie">Cookie</string>
    <!-- Set-Cookie -->


    <!-- Exception Error Messages -->
    <string name="exception_json_errorr">Incorrect JSON response received from server.</string>
    <string name="exception_key_management">Error processing key value.</string>
    <string name="exception_unrecoverable_key">Error recovering a key from a KeyStore.</string>
    <string name="exception_keystore">General Keystore error.</string>
    <string name="exception_algorithm_not_found_exception">Requested algorithm could not be found.</string>
    <string name="exception_certificate_not_found">Certificate not found.</string>
    <string name="exception_io_exception">Server not reachable.</string>
    <string name="exception_network_not_found">Please check you network connection and try again.</string>
    <string name="exception_general">Error. Server returned incorrect response</string>

</resources>