<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_ten_px"
        android:layout_marginLeft="@dimen/margin_fifteen_px"
        android:layout_marginTop="@dimen/margin_ten_px"
        android:text="@string/customer_service"
        android:textColor="@color/text_heading"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llCardService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_odd"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblCardServiceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_fifteen_px"
            android:gravity="left"
            android:text="@string/card_service"
            android:textColor="@color/text_body"
            android:textSize="@dimen/transaction_font" />

        <TextView
            android:id="@+id/lblCardServiceNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_fifteen_px"
            android:layout_weight="0.5"
            android:gravity="right"
            android:padding="@dimen/margin_ten_px"
            android:text="@string/card_service_number"
            android:textColor="@color/text_body"
            android:textSize="@dimen/transaction_font" />
    </LinearLayout>

    <include layout="@drawable/seperator" />

    <LinearLayout
        android:id="@+id/llBlockCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_even"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblBlockCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_fifteen_px"
            android:gravity="left"
            android:text="@string/block_card"
            android:textColor="@color/text_body"
            android:textSize="@dimen/transaction_font" />

        <TextView
            android:id="@+id/lblBlockCardNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_fifteen_px"
            android:layout_weight="0.5"
            android:gravity="right"
            android:padding="@dimen/margin_ten_px"
            android:text="@string/block_card_number"
            android:textColor="@color/text_body"
            android:textSize="@dimen/transaction_font" />
    </LinearLayout>

    <include layout="@drawable/seperator" />

</LinearLayout>