<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <!-- <ImageView -->
    <!-- android:id="@+id/imgLogo" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentTop="true" -->
    <!-- android:layout_centerHorizontal="true" -->
    <!-- android:layout_marginTop="@dimen/view_margin_top" -->
    <!-- android:contentDescription="@null" -->
    <!-- android:src="@drawable/ic_launcher" /> -->

    <TextView
        android:id="@+id/lblCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearCardService"
        android:layout_margin="@dimen/margin_ten_px"
        android:text="@string/customer_service"
        android:textColor="@color/text_heading"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearCardService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearBlockCard"
        android:background="@color/list_odd"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblCardServiceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_ten_px"
            android:gravity="left"
            android:text="@string/card_service"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/lblCardServiceNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_ten_px"
            android:layout_weight="0.5"
            android:gravity="right"
            android:padding="@dimen/margin_ten_px"
            android:text="@string/card_service_number"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <!-- <include -->
    <!-- android:layout_below="@+id/linearCardService" -->
    <!-- layout="@drawable/seperator" /> -->

    <LinearLayout
        android:id="@+id/linearBlockCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:background="@color/list_even"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblBlockCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_ten_px"
            android:gravity="left"
            android:text="@string/block_card"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/lblBlockCardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_ten_px"
            android:layout_weight="0.5"
            android:gravity="right"
            android:padding="@dimen/margin_ten_px"
            android:text="@string/block_card_number"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Theme.Coopmedlem.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_fifteen_px"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_normal" />

</RelativeLayout>