<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/margin_ten_px"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_five_px"
                android:gravity="left"
                android:text="@string/credit_limit"
                android:textColor="@color/text_heading"
                android:textSize="@dimen/font_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblCreditlimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_five_px"
                android:gravity="right"
                android:text="0"
                android:textColor="@color/text_body"
                android:textSize="@dimen/font_currency"
                android:textStyle="normal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnIncreaseCreditLimit"
            style="@style/Theme.Coopmedlem.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_fifteen_px"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="0.5"
            android:text="@string/btn_increase_credit_limit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_fifteen_px"
        android:text="@string/cards"
        android:textColor="@color/text_heading"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/allCardsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:clickable="true"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_ten_px"
        android:text="@string/customer_service"
        android:textColor="@color/text_heading"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearCardService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_odd"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblCardServiceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_ten_px"
            android:gravity="left"
            android:text="@string/card_service"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/lblCardServiceNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_ten_px"
            android:layout_weight="0.5"
            android:gravity="right"
            android:padding="@dimen/margin_ten_px"
            android:text="@string/card_service_number"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <include layout="@drawable/seperator" />

    <LinearLayout
        android:id="@+id/linearBlockCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_even"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblBlockCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_ten_px"
            android:gravity="left"
            android:text="@string/block_card"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/lblBlockCardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_ten_px"
            android:layout_weight="0.5"
            android:gravity="right"
            android:padding="@dimen/margin_ten_px"
            android:text="@string/block_card_number"
            android:textColor="@color/text_body"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <include layout="@drawable/seperator" />

</LinearLayout>