<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_usual_margin"
            android:text="@string/desired_increase_in_credit"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="normal" />

        <include layout="@drawable/seperator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_ten_px"
            android:weightSum="100" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:text="@string/yearly_income"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/txtReceiversName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:hint="@string/receiver_name"
                android:textSize="@dimen/font_size_normal" >
            </EditText>
        </LinearLayout>

        <include layout="@drawable/seperator" />
    </LinearLayout>

</RelativeLayout>