<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <include -->
    <!-- android:id="@+id/title" -->
    <!-- layout="@layout/view_actionbar_title" /> -->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_usual_margin"
        android:gravity="center"
        android:text="@string/transfer_funds_title"
        android:textSize="@dimen/normal_font_size"
        android:textStyle="normal" />

    <include layout="@drawable/seperator" />

    <EditText
        android:id="@+id/edtReceiversName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_usual_margin"
        android:background="@android:color/transparent"
        android:hint="@string/receiver_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/normal_font_size" >
    </EditText>

    <include layout="@drawable/seperator" />

    <EditText
        android:id="@+id/edtAccountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_usual_margin"
        android:background="@android:color/transparent"
        android:hint="@string/account_number"
        android:inputType="number"
        android:textSize="@dimen/normal_font_size" >
    </EditText>

    <include layout="@drawable/seperator" />

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_usual_margin"
        android:background="@android:color/transparent"
        android:hint="@string/amount"
        android:inputType="number"
        android:textSize="@dimen/normal_font_size" >
    </EditText>

    <include layout="@drawable/seperator" />

    <EditText
        android:id="@+id/edtMessageOrKID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_usual_margin"
        android:background="@android:color/transparent"
        android:hint="@string/message_from_kid"
        android:inputType="text"
        android:textSize="@dimen/normal_font_size" >
    </EditText>

    <include layout="@drawable/seperator" />

    <Button
        android:id="@+id/btnTransferFunds"
        style="@style/Theme.Entercardcoop.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_usual_margin"
        android:text="Transfer funds"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_font_size" />

</LinearLayout>